--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         <main role='main'>
             <form>
                 <fieldset>
-                    <input type='text' name='search' id='input-searchTerms' placeholder='search term' required>
+                    <label for="input-searchTerms">Search for videos</label>
+                    <input type='text' name='search' id='input-searchTerms' placeholder='Search term' required>
                     <input type='submit' value="Search" id='button-getVideos'>
                 </fieldset>
             </form>
