--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <link rel='stylesheet' href='css/styles.css' type='text/css'>
         <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
     </head>
+    <!-- Do I add ARIA Live to main or the div where the results get added? -->
     <body>
         <header role='banner'>
             <img src='img/logo.png' alt='Thinkful Tube logo'></img>
@@ -23,7 +24,7 @@
                     <input type='submit' value="Search" id='button-getVideos'>
                 </fieldset>
             </form>
-            <div class='search-results'></div>
+            <div class='search-results' aria-live='assertive'></div>
         </main>
         <script type='text/javascript' src='js/script.js'></script>
     </body>
